# ttbud

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  app.json  bors.toml  docker-compose.dev.yml  docker-compose.yml  heroku.yml  netlify.toml  now.json
.circleci/: config.yml
.dependabot/: config.yml
.github/: dependabot.yml  renovate.json5
.github/workflows/: pr.yml
api/: .coveragerc  .dockerignore  .gitignore  Dockerfile  build_image_ci  gunicorn.conf.py  main.py  mypy.ini  pyproject.toml  requirements.txt
api/load/: clear_load_test_rooms.py  constants.py  locustfile.py
api/src/: api_structures.py  apm.py  assert_never.py  colors.py  compaction.py  config.py  default_weak_value_dict.py  game_components.py  game_state_server.py  gunicorn_config.py  main.py  rate_limit.py  redis.py  room.py  room_store.py  routes.py  usage_stats.py  ws_close_codes.py  wsmanager.py
api/src/api/: api_structures.py  stats_endpoint.py  ws_close_codes.py  wsmanager.py
api/src/rate_limit/: memory_rate_limit.py  noop_rate_limit.py  rate_limit.py  redis_rate_limit.py
api/src/room_store/: common.py  json_to_actions.py  memory_room_archive.py  memory_room_store.py  merged_room_store.py  redis_room_listener.py  redis_room_store.py  room_archive.py  room_store.py  s3_room_archive.py
api/src/util/: amerge.py  assert_never.py  async_collect.py  async_util.py  detailed_formatter.py  ip.py  lazy_app.py  lazy_asgi.py
api/src/ws/: starlette_ws_client.py  ws_client.py
api/tests/: __init__.py  conftest.py  emulated_client.py  fake_apm.py  helpers.py  static_fixtures.py  test_colors.py  test_compaction.py  test_game_components.py  test_game_state_server.py  test_json_to_actions.py  test_merged_room_store.py  test_rate_limit.py  test_room.py  test_room_archive.py  test_room_store.py  test_websocket_manager.py
api/tests/api/: test_wsmanager.py
api/tests/load/: test_clear_load_test_rooms.py
api/tests/util/: test_amerge.py  test_async_util.py  test_detailed_formatter.py
e2e/: .gitignore  .pnp.cjs  README.md  config.js  global-setup.js  global-setup.ts  jest-puppeteer.config.js  jest.config.js  jest.setup.js  package.json  playwright.config.ts  tsconfig.json
e2e/src/: basic.test.ts  config.ts  dragTo.ts
e2e/tests/: basic.spec.ts  config.ts
e2e/tests/util/: dragTo.ts  invariants.ts  page-expectations.ts
hooks/: pre-commit
infra/: .gitignore  .terraform.lock.hcl  README.md  bootstrap_aws  configure-aws.sh  do_deploy  get_ci_artifact  init-aws.sh  main.tf
infra/ingress/: Caddyfile  Caddyfile.dev
infra/modules/api/: main.tf  variables.tf
infra/modules/owned-bucket/: main.tf  outputs.tf  variables.tf
web/: .gitignore  .pnp.cjs  .snyk  Dockerfile  cosmos.config.json  package-lock.json  package.json  prettierrc.yml  tsconfig.json
web/.storybook/: config.js
web/public/: _redirects  index.html  manifest.json
web/src/: App.tsx  Token.tsx  TokenSheet.tsx  config.ts  index.tsx  missing-types.d.ts  setupTests.ts  types.ts
web/src/drag/: AccessibleDraggable.tsx  DndContext.ts  DndContext2.tsx  DragOverlay.tsx  DragStateTypes.ts  Draggable.fixture.tsx  Draggable.stories.tsx  Draggable.test.tsx  Draggable.tsx  Draggable2.tsx  DraggableTest.fixture.tsx  Droppable.fixture.tsx  Droppable.stories.tsx  Droppable.tsx  Droppable2.tsx  DroppableMonitor.test.ts  DroppableMonitor.ts  drag-slice.test.ts  drag-slice.ts  getDragResult.ts  util.ts
web/src/drag/__test_util__/: FakeDroppableMonitor.ts
web/src/network/: BoardStateApiClient.test.ts  BoardStateApiClient.ts  BoardSyncer.test.ts  BoardSyncer.ts  RealBoardStateApiClient.test.ts  RealBoardStateApiClient.ts  TokenStateClient.ts  api-types.ts  board-state-diff.test.ts  board-state-diff.ts  boardSyncer.ts  networkSyncMiddleware.ts  networkSyncer.ts
web/src/network/__test_util__/: FakeApiClient.ts
web/src/state/: app-slice.ts  board-slice.test.ts  board-slice.ts  boardSyncer.ts  character-tray-slice.ts  createStore.ts  debugLog.ts  drag-slice.test.ts  drag-slice.ts  floor-tray-slice.ts  getDragResult.ts  networkBoardSyncer.ts  reorderIcons.ts  rootReducer.ts  store.ts  util.ts
web/src/state/__test_util__/: FakeDroppableMonitor.ts
web/src/store/: createStore.ts  persistConfig.ts  rootReducer.ts
web/src/ui/: App.tsx  Board.tsx  CardTokenSheet.tsx  Draggable.tsx  DropIds.ts  DroppableIds.ts  FloorTokenSheet.tsx  SearchDialog.tsx  Token.tsx  TokenSheet.tsx  TtbudTheme.tsx  icon-loader.ts  icons.ts
web/src/ui/__mocks__/: icon-loader.ts
web/src/ui/__stories__/: DragAwareSquare.tsx  Square.tsx  no-border.tsx
web/src/ui/__test_util__/: pointer.ts  time.ts
web/src/ui/about/: About.fixture.tsx  About.tsx
web/src/ui/app/: App.stories.tsx  App.test.tsx  App.tsx  App2.tsx  app-slice.ts
web/src/ui/board/: Board.fixture.tsx  Board.stories.tsx  Board.test.tsx  (+11 more)
web/src/util/: .shape-math.ts.swp  UnreachableCaseError.ts  arr.ts  assignRef.test.ts  assignRef.ts  decode-util.ts  decode.ts  flushPromises.ts  invariants.ts  isMac.ts  list.ts  mergeRefs.ts  pause.ts  shape-math.test.ts  shape-math.ts  throttle.test.ts  throttle.ts  timeout.ts  use-util.ts
(+108 files in other folders)
