[tool.poetry]
name = "ttbud"
version = "1.2"
description = "Your virtual table friend"
authors = ["Stephen Johnson <github@sjoh.net>", "Sam Burba <github@samburba.com>"]

[tool.poetry.dependencies]
python = "^3.9"
websockets = "^9.1"
dacite = "^1.6.0"
aioredis = "^1.3.1"
timber = "^2.1.0"
scout_apm = "^2.14.2"
starlette = "^0.16.0"
uvicorn = "^0.15.0"
httptools = "^0.3.0"
uvloop = "^0.16.0"
gunicorn = "^20.1.0"
scout-apm = "^2.19.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.6b0"
pytest-mock = "^3.6.1"
pytest-asyncio = "^0.15.1"
mypy = "^0.902"
flake8 = "^3.9.2"
watchgod = "^0.7"
fakeredis = "^1.5.2"
pytest-lazy-fixture = "^0.6.3"
locust = "^1.5.3"
# Need a synchronous websocket client for interacting with the API via locust
# locust does not support asyncio
websocket_client = "^1.1.0"
# fakeredis uses it for redis lua support
lupa = "^1.9"
pytest-cov = "^2.12.1"
time-machine = "^2.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
