[tool.poetry]
name = "ttbud"
version = "1.2.2"
description = "Your virtual table friend"
authors = ["Stephen Johnson <github@sjoh.net>", "Sam Burba <github@samburba.com>"]

[tool.poetry.dependencies]
python = "^3.10.8"
websockets = "^10.4"
dacite = "^1.6.0"
timber = "^2.1.0"
starlette = "^0.40.0"
uvicorn = "^0.20.0"
httptools = "^0.5.0"
uvloop = "^0.17.0"
gunicorn = "^22.0.0"
scout-apm = "^2.26.1"
aiobotocore = "^2.4.1"
redis = {extras = ["hiredis"], version = "^4.3.5"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^24.0.0"
pytest-mock = "^3.10.0"
pytest-asyncio = "^0.20.2"
mypy = "^0.991"
types-mock = "^4.0.15.2"
types-python-dateutil = "^2.8.19.4"
types-redis = "^4.3.21.6"
types-requests = "^2.28.11.5"
types-setuptools = "^65.6.0.1"
flake8 = "^6.0.0"
watchdog = "^2.1.9"
fakeredis = {extras = ["lua"], version = "^2.2.0"}
pytest-lazy-fixture = "^0.6.3"
locust = "^2.13.1"
# Need a synchronous websocket client for interacting with the API via locust
# locust does not support asyncio
websocket-client = "^1.4.2"
pytest-cov = "^4.0.0"
time-machine = "^2.8.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.mypy]
# The vast majority of python libraries do not support type hints, instead of
# specifying every single one we use below, we just disable the check here
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
pretty = true

[tool.coverage.run]
branch = true

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",
    # Don't care about empty implementations for protocols
    "\\.\\.\\.",
    # assert_never occurs on lines we want mypy to verify statically are never run
    "assert_never"
]
ignore_errors = true

[tool.coverage.html]
directory = "coverage"

[tool.pytest.ini_options]
asyncio_mode = "auto"
