[project]
name = "ttbud"
version = "1.2.2"
description = "Your virtual table friend"
requires-python = ">=3.10"
authors = [
    { name = "Stephen Johnson", email = "github@sjoh.net" },
    { name = "Sam Burba", email = "github@samburba.com" },
]
dependencies = [
    "websockets==15.0.1",
    "dacite==1.9.2",
    "timber==2.1.0",
    "starlette==0.46.2",
    "uvicorn==0.34.2",
    "httptools==0.6.4",
    "uvloop==0.21.0",
    "gunicorn==23.0.0",
    "scout-apm==2.26.1",
    "aiobotocore==2.21.1",
    "redis[hiredis]==5.3.0",
]

[dependency-groups]
dev = [
    "pytest==8.3.5",
    "black==22.12.0",
    "pytest-mock==3.14.0",
    "pytest-asyncio==0.26.0",
    "mypy==0.991",
    "types-mock==4.0.15.2",
    "types-python-dateutil==2.9.0.20241206",
    "types-redis==4.3.21.6",
    "types-requests==2.28.11.5",
    "types-setuptools==65.6.0.1",
    "flake8==6.1.0",
    "watchdog==2.1.9",
    "fakeredis[lua]==2.28.1",
    "locust==2.36.2",
    # Need a synchronous websocket client for interacting with the API via locust
    # locust does not support asyncio
    "websocket-client==1.4.2",
    "pytest-cov==4.1.0",
    "time-machine==2.8.2",
    "pytest-lazy-fixtures>=1.1.2",
]

[tool.mypy]
# The vast majority of python libraries do not support type hints, instead of
# specifying every single one we use below, we just disable the check here
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
pretty = true

[tool.coverage.run]
branch = true

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",
    # Don't care about empty implementations for protocols
    "\\.\\.\\.",
    # assert_never occurs on lines we want mypy to verify statically are never run
    "assert_never",
]
ignore_errors = true

[tool.coverage.html]
directory = "coverage"

[tool.pytest.ini_options]
asyncio_mode = "auto"
